# python

amazing-final/: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt
amazing-final/mazegen/: maze_generator.py
amazing-final/utils/: config_parser.py  maze_renderer.py
python 06/: ft_kaboom_0.py  ft_kaboom_1.py
python 06/alchemy/: __init__.py  potions.py
python 08/ex0/: construct.py
python 08/ex1/: loading.py  pyproject.toml
python 08/ex2/: .env.example  .gitignore  oracle.py
python 09/ex0/: space_station.py
python 09/ex1/: alien_contact.py
python 09/ex2/: space_crew.py
python 10/ex0/: lambda_spells.py
python 10/ex1/: higher_magic.py
python 10/ex2/: scope_mysteries.py
python 10/ex3/: functools_artifacts.py
python 10/ex4/: decorator_mastery.py
python01/ex0/: ft_garden_intro.py
python01/ex1/: ft_garden_data.py
python01/ex2/: ft_plant_growth.py
python01/ex3/: ft_plant_factory.py
python01/ex4/: ft_garden_security.py
python01/ex5/: ft_plant_types.py
python02/ex0/: ft_first_exception.py
python02/ex1/: ft_raise_exception.py
python02/ex2/: ft_different_errors.py
python02/ex3/: ft_custom_errors.py
python02/ex4/: ft_finally_block.py
python03/ex0/: ft_command_quest.py
python03/ex1/: ft_score_analytics.py
python03/ex2/: ft_coordinate_system.py
python03/ex3/: ft_achievement_tracker.py
python03/ex4/: ft_inventory_system.py
python03/ex5/: ft_data_stream.py
python03/ex6/: ft_data_alchemist.py
python04/ex0/: ft_ancient_text.py
(+11 files in other folders)
