[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
authors = [
  { name="azidouh", email="azidouh@student.1337.ma" },
  { name="abmahama", email="abmahama@student.1337.ma" },
]
description = "A maze generation and solving package for the 42 curriculum"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[tool.setuptools.packages.find]
where =["."]
include = ["mazegen*"]