[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis pipeline"
authors = ["Data Architect <architect@zion.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
